@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-17T08:26:24Z",
+  "timestamp" : "2022-09-17T16:29:25Z",
   "count_outdated" : 135,
   "uniques_outdated" : 29,
-  "count" : 155,
+  "count" : 156,
   "uniques" : 41,
   "clones" : [
     {
@@ -77,8 +77,8 @@
     },
     {
       "timestamp": "2022-09-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
