@@ -1,3 +1,11 @@
+2022-09-17T16:29:25Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3074026026
+* notice: last 14d: unq all: 2 21
+* notice: prev accum: outdated-unq outdated-all / unq all: 29 135 / 41 155
+* notice: next accum: outdated-unq outdated-all / unq all: 29 135 / 41 156
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-17]
+
 2022-09-17T08:26:24Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3072696971
 * notice: last 14d: unq all: 2 20
